--- a/kv-support-tech/angular/src/app/app.component.html
+++ b/kv-support-tech/angular/src/app/app.component.html
@@ -7,3 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.17.0/font/bootstrap-icons.css" rel="stylesheet">
 <!-- Routing based on the module that opened (popup/options/tab) -->
 <router-outlet></router-outlet>
+
+<footer>
+  <p>Made by <a href="https://www.facebook.com/moc.beo.2112/">anh.hn</a></p>
+</footer>
