--- a/kv-support-tech/angular/src/app/modules/popup/pages/popup/popup.component.html
+++ b/kv-support-tech/angular/src/app/modules/popup/pages/popup/popup.component.html
@@ -2,7 +2,7 @@
   <div class="row mt-2">
     <div class="col-md-4">
       <div class="input-group">
-        <span class="input-group-text">RetailerId:</span>
+        <span class="input-group-text">RetailerId</span>
         <input type="text" class="form-control" [(ngModel)]="retailerInfo.Id">
         <button class="btn btn-outline-secondary" type="button" (click)="copyInputMessage(retailerInfo.Id)">
           <i class="far fa-copy"></i>
@@ -14,7 +14,7 @@
   <div class="row mt-2">
     <div class="col-md-4">
       <div class="input-group">
-        <span class="input-group-text">RetailerCode:</span>
+        <span class="input-group-text">RetailerCode</span>
         <input type="text" class="form-control" [(ngModel)]="retailerInfo.Code">
         <button class="btn btn-outline-secondary" type="button" (click)="copyInputMessage(retailerInfo.Code)">
           <i class="far fa-copy"></i>
@@ -23,7 +23,7 @@
     </div>
   </div>
 
-  <div class="row mt-2">
+  <!-- <div class="row mt-2">
     <div class="col-md-4">
       <div class="input-group">
         <span class="input-group-text">KvSession:</span>
@@ -33,15 +33,15 @@
         </button>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="row mt-2">
     <div class="col-md-4">
       <div class="input-group">
-        <span class="input-group-text">Fbid:</span>
-        <input type="text" class="form-control" [(ngModel)]="retailerInfo.fbUT">
-        <button class="btn btn-outline-secondary" type="button" (click)="getTokenAndCopy()">
-          <i class="fas fa-file-export"></i>
+        <span class="input-group-text">Shard</span>
+        <input type="text" class="form-control" [(ngModel)]="retailerInfo.GroupId">
+        <button class="btn btn-outline-secondary" type="button" (click)="copyInputMessage(retailerInfo.GroupId)">
+          <i class="far fa-copy"></i>
         </button>
       </div>
     </div>
@@ -50,16 +50,37 @@
   <div class="row mt-2">
     <div class="col-md-4">
       <div class="input-group">
-        <span class="input-group-text">Get FBUT:</span>
-        <input type="text" class="form-control" [(ngModel)]="retailerInfo.fbUT">
+        <span class="input-group-text">fbid</span>
+        <input type="text" class="form-control" [(ngModel)]="retailerInfo.fbId">
         <button class="btn btn-outline-secondary" type="button" (click)="getTokenAndCopy()">
           <i class="fas fa-file-export"></i>
         </button>
       </div>
     </div>
   </div>
-
-
-
+  
+  <div class="row mt-2" *ngIf="retailerInfo.fbName">
+    <div class="col-md-4">
+      <div class="input-group">
+        <span class="input-group-text">fbname</span>
+        <input type="text" class="form-control" [(ngModel)]="retailerInfo.fbName">
+        <button class="btn btn-outline-secondary" type="button" (click)="copyInputMessage(retailerInfo.fbName)">
+          <i class="far fa-copy"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+  
+  <div class="row mt-2">
+    <div class="col-md-4">
+      <div class="input-group">
+        <span class="input-group-text">fbids</span>
+        <input type="text" class="form-control" [(ngModel)]="retailerInfo.fbIds">
+        <button class="btn btn-outline-secondary" type="button" (click)="copyInputMessage(retailerInfo.fbIds)">
+          <i class="fas fa-file-export"></i>
+        </button>
+      </div>
+    </div>
+  </div>
 
 </div>
