--- a/kv-support-tech/angular/src/app/app.component.html
+++ b/kv-support-tech/angular/src/app/app.component.html
@@ -9,5 +9,5 @@
 <router-outlet></router-outlet>
 
 <footer>
-  <p>Made by <a href="https://www.facebook.com/moc.beo.2112/">anh.hn</a></p>
+  <p>Made by <a href="https://www.facebook.com/moc.beo.2112/">anh.hn - 079.909.1369</a></p>
 </footer>
