--- a/kv-support-tech/angular/src/app/modules/popup/pages/popup/popup.component.scss
+++ b/kv-support-tech/angular/src/app/modules/popup/pages/popup/popup.component.scss
@@ -1,9 +1,51 @@
 .input-group-text {
-    width: 120px;
-    background-color: #0090da;
-    color: #fff;
+    width: 130px;
+    background-color: #0090da; 
+    color: #fff; 
+    font-weight: bold;
 }
 
-.input-group .btn{
-    width: 50px;
+.input-group .btn {
+    width: 50px; 
+}
+
+.toast {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 350px;
+  background-color: #28a745;
+  color: #fff;
+  font-size: 12px;
+  border-radius: 8px; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out; 
+}
+
+.toast.show {
+  opacity: 1; 
+}
+
+.toast-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+
+@keyframes toastFadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translateY(0);
+  }
+}
+
+.toast.show {
+  animation: toastFadeIn 0.05s ease-in-out;
 }
